Migrate to Bootstrap 5

--- a/src/app/components/main/main/main.component.html
+++ b/src/app/components/main/main/main.component.html
@@ -2,19 +2,19 @@
 <section>
 
   <div id="app" class="flex-container">
-    <div class="flex-item" style="background-color:white">
+    <div class="flex-item">
     <app-outstanding></app-outstanding>
     </div>
 
-    <div class="flex-item" style="background-color:white">
+    <div class="flex-item">
       <app-pending-changes></app-pending-changes>
     </div>
 
-    <div class="flex-item" style="background-color:white">
+    <div class="flex-item" >
       <app-open-notes></app-open-notes>
     </div>
 
-    <div class="flex-item" style="background-color:white">
+    <div class="flex-item" >
       <app-upcoming-changes></app-upcoming-changes>
     </div>
   </div>
