--- a/src/app/components/common/login/login.component.html
+++ b/src/app/components/common/login/login.component.html
@@ -1,25 +1,30 @@
 <section id="login" class="padded">
   <div class="container">
     <div class="p-4"></div>
-      <h2 class="text-center">Login</h2>
+      <h3 class="text-center">Login</h3>
       <div class="row">
           <div class="col-md-4">
           </div>
           <div class="col-md-4">
               <form ngNativeValidate [formGroup]="loginForm"
               (ngSubmit)="verificarLogin(loginForm.value)">
-                  <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Username"
-                      formControlName="username" required>
+
+                  <div class="form-floating mb-3">
+                    <input type="text" class="form-control" id="floatingInput" placeholder="Username" formControlName="username">
+                    <label for="floatingInput">Username</label>
                   </div>
-                  <div class="form-group">
-                      <input type="password" class="form-control" placeholder="Password"
-                      formControlName="password" required>
+
+                  <div class="form-floating mb-3">
+                    <input type="password" class="form-control" id="floatingInput" placeholder="Password" formControlName="password">
+                    <label for="floatingInput">Password</label>
                   </div>
+
                   <div class="form-group">
-                      <input type="submit" class="btn btn-secondary" value="Login">
+                      <input type="submit" class="btn btn-primary" value="Login">
                   </div>
               </form>
+              <div class="col-md-4">
+              </div>
               <div class="form-group">
                   <input type="button" class="btn btn-secondary" value="Logout"
                   (click)="cerrarSesion()">
