--- a/src/app/components/common/nav/nav.component.html
+++ b/src/app/components/common/nav/nav.component.html
@@ -1,3 +1,5 @@
+
+<!--
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
       <img src="../../../../assets/images/logo-dark.svg" class="logo-brand" alt="logo" style="height: 50px;">
@@ -30,3 +32,50 @@
       </div>
   </div>
 </nav>
+
+-->
+
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">H2O Vitanza</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarColor01">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+          <a class="nav-link active" href="/">Dashboard
+            <span class="visually-hidden">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/customers">Customers</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="/filters">Filters</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="/orders">Orders</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/products">Products</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="/notes">Notes</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="/login"><fa-icon [icon]="faUser"></fa-icon></a>
+        </li>
+
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
