--- a/src/app/components/main/outstanding/outstanding.component.html
+++ b/src/app/components/main/outstanding/outstanding.component.html
@@ -1,11 +1,11 @@
 <section class="mt-5" id="outstanding-orders">
-  <h2>Outstanding Orders</h2>
+  <h3>Outstanding Orders</h3>
   <div class="container">
     <div class="container my-5 text-center">
       <div class="p-4"></div>
-      <table class="table">
+      <table class="table table-hover">
         <thead>
-          <tr>
+          <tr class="table-primary">
             <th>Date Placed</th>
             <th>Delivery Method</th>
             <th>Notes</th>
@@ -50,13 +50,8 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Order Details</h5>
-        <button
-          type="button"
-          class="close"
-          data-dismiss="modal"
-          aria-label="Close"
-        >
-          <span aria-hidden="true">&times;</span>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true"></span>
         </button>
       </div>
 
@@ -96,13 +91,8 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Customer Info</h5>
-        <button
-          type="button"
-          class="close"
-          data-dismiss="modal"
-          aria-label="Close"
-        >
-          <span aria-hidden="true">&times;</span>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true"></span>
         </button>
       </div>
 
