Client component addition and updates is working but still requires testing.

--- a/src/app/components/main/open-notes/open-notes.component.html
+++ b/src/app/components/main/open-notes/open-notes.component.html
@@ -134,7 +134,7 @@
           </tr>
           <tr>
             <td>inCharge</td>
-            <td>{{ customer?.inCharge }}</td>
+            <td>{{ customer?.InCharge }}</td>
           </tr>
           <tr>
             <td>Notes</td>
