--- a/src/app/components/main/pending-changes/pending-changes.component.html
+++ b/src/app/components/main/pending-changes/pending-changes.component.html
@@ -134,7 +134,7 @@
           </tr>
           <tr>
             <td>inCharge</td>
-            <td>{{ customer?.inCharge }}</td>
+            <td>{{ customer?.InCharge }}</td>
           </tr>
           <tr>
             <td>Notes</td>
