--- a/src/app/components/tables/customers/customers.component.html
+++ b/src/app/components/tables/customers/customers.component.html
@@ -7,56 +7,65 @@
           Customer</button>
       </div>
 
+      <div class=" p-1"></div>
+
       <div id="addition-form" style="display: none;">
         <form ngNativeValidate [formGroup]="AddCustomerForm" (ngSubmit)="addCustomer(AddCustomerForm.value)">
 
-          <div class="form-floating">
+          <div class="form-floating p-1">
             <input type="text" class="form-control" id="FullName" placeholder="Full Name" formControlName="GSI1PK" required>
             <label for="FullName">Full Name</label>
           </div>
 
-          <div class="form-floating">
+          <div class="form-floating p-1">
             <input type="text" class="form-control" id="PrimaryAddress" placeholder="Primary Address" formControlName="Address1" required>
             <label for="PrimaryAddress">Primary Address</label>
           </div>
 
-          <div class="form-floating">
+          <div class="form-floating p-1">
             <input type="text" class="form-control" id="PrimaryPhone" placeholder="Primary Phone" formControlName="Phone1" required>
             <label for="PrimaryPhone">Primary Phone</label>
           </div>
 
-          <div class="form-floating">
+          <div class="form-floating p-1">
             <input type="text" class="form-control" id="SecondaryAddress" placeholder="Secondary Address" formControlName="Address2">
             <label for="SecondaryAddress">Secondary Address</label>
           </div>
 
-          <div class="form-floating">
+          <div class="form-floating p-1">
             <input type="text" class="form-control" id="SecondaryPhone" placeholder="Secondary Phone" formControlName="Phone2">
             <label for="SecondaryPhone">Secondary Phone</label>
           </div>
 
-          <div class="form-floating">
+          <div class="form-floating p-1">
             <input type="email" class="form-control" id="Email" placeholder="Email" formControlName="Email">
             <label for="Email">Email</label>
           </div>
 
-          <div class="form-floating">
+          <div class="form-floating p-1">
             <input type="text" class="form-control" id="inCharge" placeholder="In Charge" formControlName="InCharge">
             <label for="InCharge">In Charge</label>
           </div>
 
-          <select formControlName="GSI1SK" id="District" class="form-control" placeholder="District" required>
+          <div class=" p-1"></div>
+
+          <select formControlName="GSI1SK" id="District" class="form-control p-1" placeholder="District" required>
             <option *ngFor="let options of districtOptions">{{options}}</option>
           </select>
 
-          <select formControlName="Intrest" id="Intrest" class="form-control" placeholder="Intrest" required>
+          <div class=" p-1"></div>
+
+          <select formControlName="Intrest" id="Intrest" class="form-control p-1" placeholder="Intrest" required>
             <option *ngFor="let options of interstOptions">{{options}}</option>
           </select>
 
           <div class="form-group">
-            <label for="Notes" class="form-label mt-4">Notes</label>
+            <label for="Notes" class="form-label mt-4 p-1">Notes</label>
             <textarea class="form-control" id="Notes" rows="2" formControlName="Notes"></textarea>
           </div>
+
+
+          <div class=" p-2"></div>
 
           <div class="form-group">
             <button class="btn btn-primary" style="background-color: #333; margin-right: 10px;"
@@ -65,6 +74,9 @@
           </div>
         </form>
       </div>
+
+
+      <div class=" p-3"></div>
 
       <div class="form-group">
         <input type="text" class="form-control"
@@ -138,18 +150,16 @@
         <div class="modal-body">
 <table>
   <tbody>
-
-
     <tr>
       <td>
-          <div class="form-group">
+          <div class="form-group p-1">
             <label for="PK">Id:</label>
             <input type="text" name="" id="PK" class="form-control" placeholder="PK" formControlName="PK"
               required readonly [(ngModel)]="customerUpdated.PK">
           </div>
         </td>
         <td>
-          <div class="form-group">
+          <div class="form-group p-1">
             <label for="GSI1PK">Name:</label>
             <input type="text" name="" id="GSI1PK" class="form-control" placeholder="GSI1PK (Full Name)" formControlName="GSI1PK"
             [(ngModel)]="customerUpdated.GSI1PK">
@@ -161,14 +171,14 @@
 
         <tr>
           <td>
-          <div class="form-group">
+          <div class="form-group p-1">
             <label for="Address1">Primary Address:</label>
             <input type="text" name="" id="Address1" class="form-control" placeholder="Address1" formControlName="Address1"
               formControlName="Address1" [(ngModel)]="customerUpdated.Address1">
           </div>
         </td>
         <td>
-          <div class="form-group">
+          <div class="form-group p-1">
             <label for="Phone1">Primary Phone:</label>
             <input type="text" name="" id="Phone1" class="form-control" placeholder="Phone1" formControlName="Phone1"
             [(ngModel)]="customerUpdated.Phone1">
@@ -179,7 +189,7 @@
 
         <tr>
           <td>
-          <div class="form-group">
+          <div class="form-group p-1">
             <label for="Address2">Secondary Address:</label>
             <input type="text" name="" id="Address2" class="form-control" placeholder="Address2"
               formControlName="Address2" [(ngModel)]="customerUpdated.Address2">
@@ -187,7 +197,7 @@
         </td>
 
         <td>
-          <div class="form-group">
+          <div class="form-group p-1">
             <label for="Phone2">Secondary Phone:</label>
             <input type="text" name="" id="Phone2" class="form-control" placeholder="Phone2" formControlName="Phone2"
             [(ngModel)]="customerUpdated.Phone2">
@@ -197,7 +207,7 @@
 
         <tr>
           <td>
-          <div class="form-group">
+          <div class="form-group p-1">
             <label for="Email">Email:</label>
             <input type="email" name="" id="Email" class="form-control" placeholder="Email" formControlName="Email"
             [(ngModel)]="customerUpdated.Email">
@@ -205,7 +215,7 @@
         </td>
 
 <td>
-          <div class="form-group">
+          <div class="form-group p-1">
             <label for="Email">In charge:</label>
             <input type="text" name="" id="InCharge" class="form-control" placeholder="InCharge" formControlName="InCharge"
             [(ngModel)]="customerUpdated.InCharge">
@@ -216,7 +226,7 @@
 
 <tr>
   <td>
-          <div class="form-group">
+          <div class="form-group p-1">
             <label for="GSI1SK">District:</label>
             <input type="text" name="" id="GSI1SK" class="form-control" placeholder="District" formControlName="GSI1SK"
             [(ngModel)]="customerUpdated.GSI1SK">
@@ -224,7 +234,7 @@
         </td>
 
         <td>
-          <div class="form-group">
+          <div class="form-group p-1">
             <label for="Notes">Notes:</label>
             <input rows="2" type="text" name="" id="Notes" class="form-control" placeholder="Notes"
             formControlName="Notes" [(ngModel)]="customerUpdated.Notes">
@@ -235,7 +245,7 @@
 
 <tr>
   <td>
-          <div class="form-group">
+          <div class="form-group p-1">
             <label for="Intrest">Intrest:</label>
             <select formControlName="Intrest" id="Intrest" class="form-control" placeholder="Intrest" [(ngModel)]="customerUpdated.Intrest">
               <option *ngFor="let options of interstOptions">{{options}}</option>
@@ -243,7 +253,7 @@
           </div>
   </td>
   <td>
-          <div class="form-group">
+          <div class="form-group p-1">
             <label for="GSI2PK">Active:</label>
             <select formControlName="GSI2PK" id="GSI2PK" class="form-control" placeholder="GSI2PK" [(ngModel)]="customerUpdated.GSI2PK">
               <option *ngFor="let options of statusOptions">{{options}}</option>
@@ -255,7 +265,7 @@
 
 <tr>
 <td>
-          <div class="form-group">
+          <div class="form-group p-1">
             <label for="DateAdded">Date Added:</label>
             <input readonly type="text" name="" id="DateAdded" class="form-control" placeholder="DateAdded" formControlName="DateAdded"
             [(ngModel)]="customerUpdated.DateAdded">
@@ -263,7 +273,7 @@
         </td>
 
         <td>
-          <div class="form-group">
+          <div class="form-group p-1">
             <label for="DateChanged">Date Changed:</label>
             <input readonly type="text" name="" id="DateChanged" class="form-control" placeholder="DateChanged" formControlName="DateChanged"
             [(ngModel)]="customerUpdated.DateChanged">
